logs/scraperwiki-local.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dumptruck'...
Compiling './lib/python3.5/site-packages/dumptruck/dumptruck.py'...
***   File "./lib/python3.5/site-packages/dumptruck/dumptruck.py", line 119
    except self.sqlite3.InterfaceError, msg:
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dumptruck/removed.py'...
***   File "./lib/python3.5/site-packages/dumptruck/removed.py", line 35
    print "This should not run."
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dumptruck-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/scraperwiki'...
Listing './lib/python3.5/site-packages/scraperwiki/geo'...
Compiling './lib/python3.5/site-packages/scraperwiki/sqlite.py'...
***   File "./lib/python3.5/site-packages/scraperwiki/sqlite.py", line 41
    print "#### one time import of %s database"
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/scraperwiki/utils.py'...
***   File "./lib/python3.5/site-packages/scraperwiki/utils.py", line 79
    print "#### one time download of %s"%name
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/scraperwiki_local-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
